--- a/src/style.css
+++ b/src/style.css
@@ -1,153 +1,6 @@
 body {
-    padding: 0;
-    margin: 0;
-    background-color: rgb(230, 230, 214);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-nav {
-    position: fixed;
-    top: 0;
-    height: 20vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-image: url("/src/pizza.jpg");
-    background-position: 0% 75%;
-    background-size: cover;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 800;
-    font-size: 3rem;
-    color: white;
-}
-
-nav>p {
-    padding-left: 8vw;
-    text-shadow: black 1px 0 10px;
-}
-
-#buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 2vw;
-    flex-wrap: wrap;
-    padding-right: 8vw;
-}
-
-button {
-    font-size: 1.1rem;
-    padding: 0.5rem 1rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 700;
-    border-radius: 0.3rem;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.6);
-    border: none;
-    box-shadow: black 1px 0 10px;
-    margin-top: 0.7rem;
-}
-
-button:hover {
-    background-color: rgba(0, 0, 0, 0.81);
-}
-
-#content {
-    display: flex;
-    flex-direction: column;;
-    align-items: center;
-    overflow: auto;
-    padding-left: 3vw;
-    padding-right: 3vw;
-    margin-top: 22vh;
-    margin-bottom: 2vw;
-    row-gap: 2vw;
-}
-
-.text {
-    width: min(70ch, 80vw);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    row-gap: 1rem;
-    background-color:  rgba(255, 255, 255, 0.6);
-    padding: 2rem;
-    border-radius: 0.3rem;
-}
-
-p {
-    padding: 0;
-    margin: 0;
-}
-
-h2 {
-    padding: 0;
-    margin: 0;
-}
-
-img {
-    width: min(70ch, 80vw);
-    height: auto;
-}
-
-
-.menue {
-    color: white;
-    text-shadow: black 1px 0 5px;
-    display: flex;
-    height: 50ch;
-    justify-content: center; /* Horizontal alignment */
-    align-items: center; /* Vertical alignment */
-    text-align: center;
-}
-
-.pizza {
-    background-image: url("/src/pizza2.jpg");
-    height: 50ch; 
-    background-size: cover;  
-    background-position: center; 
-    border: 2rem solid rgb(245, 245, 239);
-    padding: 0;
-}
-
-.pasta {
-    background-image: url("/src/spaghetti.jpg");
-    height: 50ch; 
-    background-size: cover;  
-    background-position: center; 
-    border: 2rem solid rgb(245, 245, 239);
-    padding: 0;
-}
-
-.burger {
-    background-image: url("/src/burger.jpg");
-    height: 50ch; 
-    background-size: cover;  
-    background-position: center; 
-    border: 2rem solid rgb(245, 245, 239);
-    padding: 0;
-}
-
-.dessert {
-    background-image: url("/src/dessert.jpg");
-    height: 50ch; 
-    background-size: cover;  
-    background-position: center; 
-    border: 2rem solid rgb(245, 245, 239);
-    padding: 0;
-}
-
-.drink {
-    background-image: url("/src/drinks.jpg");
-    height: 50ch; 
-    background-size: cover;  
-    background-position: center; 
-    border: 2rem solid rgb(245, 245, 239);
-    padding: 0;
-}
-
-h1 {
-    font-size: 3rem;
+  padding: 0;
+  margin: 0;
+  background-color: rgb(230, 230, 214);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
